--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Contact Information</h2>
-									<p>My Email, Github Page and Linkedin Page is listed below.</p>
+									<p>My Email, Github Page and Linkedin Page are listed below.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
