--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
 							<ul class="features">
 								<li>
 									<span class="icon major style3 fa-copy"></span>
-									<h3>Visualisation in Tableau</h3>
-									<p>A Dashboard showcasing the relevant data using bar graphs for Chicago Bike Rental Dataset.</p>
+									<h3>Visualisation in Tableau and R</h3>
+									<p>A Dashboard showcasing the relevant data using bar graphs for Chicago Bike Rental Dataset, along with Visualisations in R showcasing rescued animal data in Australia in report format.</p>
 								</li>
 							</ul>
 							<footer class="major">
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/jerry3354/viz/CaseStudy1_16584495243650/Dashboard1" class="button">Learn More</a></li>
+									<li><a href="https://public.tableau.com/app/profile/jerry3354/viz/CaseStudy1_16584495243650/Dashboard1" class="button">Tableau</a></li>
+									<li><a href="https://drive.google.com/file/d/13Xj4PFJLSa1mDyBgQPndqjxrz3i1kffC/view?usp=sharing" class="button">R</a></li>
 								</ul>
 							</footer>
 						</section>	
