--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro">Introduction</a></li>
-							<li><a href="#first">Project 1</a></li>
-							<li><a href="#second">Project 2</a></li>
-							<li><a href="#third">Project 3</a></li>
-							<li><a href="#fourth">Project 4</a></li>
+							<li><a href="#first">SQL Project</a></li>
+							<li><a href="#second">Python Project</a></li>
+							<li><a href="#third">Visualisation Project</a></li>
+							<li><a href="#fourth">R Project</a></li>
 							<li><a href="#cta">Contact Me</a></li>
 						</ul>
 					</nav>
@@ -74,7 +74,7 @@
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Data Exploration in SQL</h3>
-										<p>Data Exploration and Analysis of Purchasing Dataset in SQL Server</p>
+										<p>Data Exploration and Analysis of Purchasing Dataset in SQL</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -112,14 +112,18 @@
 							<ul class="features">
 								<li>
 									<span class="icon major style3 fa-copy"></span>
-									<h3>Visualisation in Tableau and R</h3>
-									<p>A Dashboard showcasing the relevant data using bar graphs for Chicago Bike Rental Dataset, along with Visualisations in R showcasing rescued animal data in Australia in report format.</p>
+									<h3>Visualisation Project in various BI software</h3>
+									<p>Tableau: Data Visualisation project for Bank Client dataset, presented in a dashboard in Tableau.                          <br>  
+									   PowerBI: Data Visualisation project for Health and Beauty dataset, presented in a dashboard in PowerBI.                          <br>
+									   SAS Viya: Data Visualisation project for Toy Demo dataset in SAS Viya, using a range of plots and techniques such as forecasting and drill through charts. 
+									</p>
 								</li>
 							</ul>
 							<footer class="major">
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/jerry3354/viz/CaseStudy1_16584495243650/Dashboard1" class="button">Tableau</a></li>
-									<li><a href="https://drive.google.com/file/d/13Xj4PFJLSa1mDyBgQPndqjxrz3i1kffC/view?usp=sharing" class="button">R</a></li>
+									<li><a href="https://github.com/JerryWuPortfolio/JerryWu.github.io/blob/main/Projects/Tableau%20Dashboard.pdf" class="button">Tableau</a></li>
+									<li><a href="https://github.com/JerryWuPortfolio/JerryWu.github.io/blob/main/Projects/Power%20BI%20Dashboard.pdf" class="button">PowerBI</a></li>
+									<li><a href="https://github.com/JerryWuPortfolio/JerryWu.github.io/blob/main/Projects/SAS%20Viya%20Project.pdf" class="button">SAS Viya</a></li>
 								</ul>
 							</footer>
 						</section>	
@@ -174,10 +178,11 @@
 					<footer id="footer">
 						<section>
 							<h2>Education</h2>
-							<p>I am currently studying at Monashu University, 
-								very close to finishing Bachelor of Engineering (Honours) 
-								and Bachelor of Commerce. I am majoring in Mechatronics
-								 Enginnering and Actuarial Studies, with relevant domain knowledge in Robotics, Finance, Actuarial and Statistics.</p>
+							<p>I am currently studying Master of Business Analytics, majoring in Logistics and supply chain management.
+								My undergraduate degree is Bachelor of Engineering (Honours) 
+								and Bachelor of Commerce at Monash University, majoring in Mechatronics
+								Enginnering and Actuarial Studies, with relevant domain
+								knowledge in Robotics, Finance, Actuarial and Statistics.</p>
 							<ul class="actions">
 							</ul>
 						</section>
